# tauri-plugin-mic-recorder

./: .release-it.ts  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.tsx
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  lib.rs
